fixed sizing && changed text
##Previous error

- On mobile the sizing made everything off center

### Problem

- Buttons were sized improperly

### Solution

- Size buttons according to fit-content value rather than making them too large
- Resized body to have vw && vh 100 sizing

## Text change

- Changed heading from 'Jevonxt' to 'WebDevJev' to better reflect purpose of site

--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,20 @@
 body {
-    background-color: black;
+	background-color: black;
 }
 
 .img-container {
-    height: 200px;
-    width: fit-content;
+	height: 200px;
+	width: fit-content;
 }
 .img-fluid {
-    height:100%;
+	height: 100%;
 }
-h1 { 
-    color: white;
-}
-a {
-    width: 400px;
+h1 {
+	color: white;
 }
 
 #share-link {
-    font-size: 30px;
-    width: fit-content;
-    color: white;
-}
-#blog-link {
-    display: none;
+	font-size: 30px;
+	width: fit-content;
+	color: white;
 }
